crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__spanish-child-speech.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "spa"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "spa"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Participant",
            "speaker_code": "PAR1"
          },
          {
            "name": null,
            "role": "Participant",
            "speaker_code": "PAR0"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "OreaPine",
        "language": [
          "spa"
        ],
        "role": "Participant",
        "speaker": "PAR1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "OreaPine",
        "language": [
          "spa"
        ],
        "role": "Participant",
        "speaker": "PAR0",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "spanish-child-speech",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Spanish child speech with audio, %mor, %gra, %wor tiers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: audio-linked file with word-level timing",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S"
                  ],
                  "lemma": "holar",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Int",
                    "S1"
                  ],
                  "lemma": "qué",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "ser",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Dem",
                    "S1"
                  ],
                  "lemma": "este",
                  "pos": "pron"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "COP"
              },
              {
                "head": 1,
                "index": 4,
                "relation": "CCOMP"
              },
              {
                "head": 1,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "hola",
                "content": [
                  {
                    "content": "hola",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 6810,
                  "start_ms": 3990
                },
                "kind": "word",
                "raw_text": "hola"
              },
              {
                "cleaned_text": "qué",
                "content": [
                  {
                    "content": "qué",
                    "type": "text"
                  }
                ],
                "kind": "word",
                "raw_text": "qué"
              },
              {
                "cleaned_text": "es",
                "content": [
                  {
                    "content": "es",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 7250,
                  "start_ms": 6810
                },
                "kind": "word",
                "raw_text": "es"
              },
              {
                "cleaned_text": "este",
                "content": [
                  {
                    "content": "este",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 7734,
                  "start_ms": 7250
                },
                "kind": "word",
                "raw_text": "este"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 7734,
            "start_ms": 3990
          },
          "content": [
            {
              "cleaned_text": "hola",
              "content": [
                {
                  "content": "hola",
                  "type": "text"
                }
              ],
              "raw_text": "hola",
              "type": "word"
            },
            {
              "cleaned_text": "qué",
              "content": [
                {
                  "content": "qué",
                  "type": "text"
                }
              ],
              "raw_text": "qué",
              "type": "word"
            },
            {
              "cleaned_text": "es",
              "content": [
                {
                  "content": "es",
                  "type": "text"
                }
              ],
              "raw_text": "es",
              "type": "word"
            },
            {
              "cleaned_text": "este",
              "content": [
                {
                  "content": "este",
                  "type": "text"
                }
              ],
              "raw_text": "este",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PAR1"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Int",
                    "S1"
                  ],
                  "lemma": "qué",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "ser",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Dem",
                    "S1"
                  ],
                  "lemma": "ese",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "lucía",
                  "pos": "propn"
                }
              },
              {
                "main": {
                  "lemma": "ah",
                  "pos": "propn"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "COP"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "FLAT"
              },
              {
                "head": 4,
                "index": 6,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "qué",
                "content": [
                  {
                    "content": "qué",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 10390,
                  "start_ms": 9257
                },
                "kind": "word",
                "raw_text": "qué"
              },
              {
                "cleaned_text": "es",
                "content": [
                  {
                    "content": "es",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 10570,
                  "start_ms": 10390
                },
                "kind": "word",
                "raw_text": "es"
              },
              {
                "cleaned_text": "eso",
                "content": [
                  {
                    "content": "eso",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 10790,
                  "start_ms": 10570
                },
                "kind": "word",
                "raw_text": "eso"
              },
              {
                "cleaned_text": "Lucía",
                "content": [
                  {
                    "content": "Lucía",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 11150,
                  "start_ms": 10790
                },
                "kind": "word",
                "raw_text": "Lucía"
              },
              {
                "cleaned_text": "ah",
                "content": [
                  {
                    "content": "ah",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 11539,
                  "start_ms": 11150
                },
                "kind": "word",
                "raw_text": "ah"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 11539,
            "start_ms": 9257
          },
          "content": [
            {
              "cleaned_text": "qué",
              "content": [
                {
                  "content": "qué",
                  "type": "text"
                }
              ],
              "raw_text": "qué",
              "type": "word"
            },
            {
              "cleaned_text": "es",
              "content": [
                {
                  "content": "es",
                  "type": "text"
                }
              ],
              "raw_text": "es",
              "type": "word"
            },
            {
              "cleaned_text": "eso",
              "content": [
                {
                  "content": "eso",
                  "type": "text"
                }
              ],
              "raw_text": "eso",
              "type": "word"
            },
            {
              "cleaned_text": "Lucía",
              "content": [
                {
                  "content": "Lucía",
                  "type": "text"
                }
              ],
              "raw_text": "Lucía",
              "type": "word"
            },
            {
              "cleaned_text": "ah",
              "content": [
                {
                  "content": "ah",
                  "type": "text"
                }
              ],
              "raw_text": "ah",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "PAR1"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "spanish-child-speech",
    "media_type": "audio"
  },
  "options": [],
  "participants": {
    "PAR0": {
      "birth_date": null,
      "code": "PAR0",
      "id": {
        "corpus": "OreaPine",
        "language": [
          "spa"
        ],
        "role": "Participant",
        "speaker": "PAR0"
      },
      "name": null,
      "role": "Participant"
    },
    "PAR1": {
      "birth_date": null,
      "code": "PAR1",
      "id": {
        "corpus": "OreaPine",
        "language": [
          "spa"
        ],
        "role": "Participant",
        "speaker": "PAR1"
      },
      "name": null,
      "role": "Participant"
    }
  }
}
