crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__stacked-markers.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "dan"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "dan"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "SPK"
          },
          {
            "name": null,
            "role": "Adult",
            "speaker_code": "LSN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "dan"
        ],
        "role": "Speaker",
        "speaker": "SPK",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "dan"
        ],
        "role": "Adult",
        "speaker": "LSN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Stacked CA markers: multiple structural markers before word text.",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "Exercises repeat1 in word_body marker-initial path.",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 285,
                      "start": 283
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "element_type": "pitch_up",
                    "span": {
                      "end": 288,
                      "start": 285
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "hello",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 295,
                      "start": 293
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°↑hello°",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "pianissimo",
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 306,
                      "start": 304
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 308,
                      "start": 306
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "pianissimo",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 320,
                      "start": 318
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 322,
                      "start": 320
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°°pianissimo°°",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "complex",
              "content": [
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 333,
                      "start": 331
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": {
                    "element_type": "pitch_up",
                    "span": {
                      "end": 336,
                      "start": 333
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": {
                    "element_type": "pitch_down",
                    "span": {
                      "end": 339,
                      "start": 336
                    }
                  },
                  "type": "ca_element"
                },
                {
                  "content": "complex",
                  "type": "text"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 348,
                      "start": 346
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "°↑↓complex°",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "overlappingsoft",
              "content": [
                {
                  "content": {
                    "marker": "top_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 362,
                      "start": 360
                    }
                  },
                  "type": "ca_delimiter"
                },
                {
                  "content": "overlapping",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 374,
                      "start": 373
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "soft",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "top_overlap_end"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": {
                    "delimiter_type": "softer",
                    "span": {
                      "end": 383,
                      "start": 381
                    }
                  },
                  "type": "ca_delimiter"
                }
              ],
              "raw_text": "⌈°overlapping+soft⌉°",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "LSN": {
      "birth_date": null,
      "code": "LSN",
      "id": {
        "corpus": "corpus",
        "language": [
          "dan"
        ],
        "role": "Adult",
        "speaker": "LSN"
      },
      "name": null,
      "role": "Adult"
    },
    "SPK": {
      "birth_date": null,
      "code": "SPK",
      "id": {
        "corpus": "corpus",
        "language": [
          "dan"
        ],
        "role": "Speaker",
        "speaker": "SPK"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
